add controller for game editions and update open api specs
